--- a/Blast_Run.ipynb
+++ b/Blast_Run.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1HwKC3sdviMQn28OTV179GIEhHOcdh0KK",
-      "authorship_tag": "ABX9TyOYf6biooo6Jx7ENwvrYQ1b",
+      "authorship_tag": "ABX9TyPgco7J1E8dT64+1Se01yhq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,6 +30,17 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Recap:\n",
+        "\n",
+        "We created a CSV file using the PubChem IDs from the initial `cdot_targets` CSV file. This file includes all the PubChem IDs for which we searched PubChem to identify targets that interact with them, recording these interactions in the \"Target Names\" column. We also included a column for \"Accession IDs,\" which are the UniProt IDs corresponding to each target name. To streamline the process, we added a column with only gene names to enhance the accuracy of the BLAST results using the accession IDs."
+      ],
+      "metadata": {
+        "id": "gYJzsT4yMynQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#Goal:\n",
         "we wanna run the blast from our previously created csv file with the targets uniprot ids agains our target (plasmodiom malaria)"
       ],
@@ -50,7 +61,7 @@
         "id": "7Au6SapAlqi7",
         "outputId": "adaf0e12-2714-42a3-bfcc-d5b9a675f0b1"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -68,8 +79,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The NCBIWWW module allows for running BLAST searches online, while NCBIXML parses the XML results from these searches into a manageable format in Python.\n",
+        "The `SeqIO` module in Biopython is used for reading and writing sequences in various bioinformatics file formats."
+      ],
+      "metadata": {
+        "id": "yytwbIuPRzNj"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "Cac2TWsilHmr"
       },
@@ -77,9 +98,9 @@
       "source": [
         "import csv\n",
         "import pandas as pd\n",
-        "from Bio.Blast import NCBIWWW\n",
-        "from Bio.Blast import NCBIXML\n",
-        "from Bio import SeqIO\n"
+        "from Bio.Blast import NCBIWWW,NCBIXML\n",
+        "from Bio import SeqIO\n",
+        "import requests"
       ]
     },
     {
@@ -91,7 +112,7 @@
       "metadata": {
         "id": "_OIG7cU8lmWt"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -107,7 +128,7 @@
         "id": "m9vCO-Zbl39F",
         "outputId": "c9f87a50-8e16-4705-d25b-145fd8577780"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -435,9 +456,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from Bio.Blast import NCBIWWW, NCBIXML\n",
-        "import requests\n",
-        "\n",
         "def fetch_uniprot_sequence(accession_id):\n",
         "    \"\"\"\n",
         "    Fetch a sequence from UniProt using the accession ID.\n",
@@ -492,7 +510,7 @@
       "metadata": {
         "id": "fSTLZjIcndWI"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -509,7 +527,7 @@
         "outputId": "b4e75038-b708-4f15-8a34-29bdec5da2e0",
         "collapsed": true
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -556,7 +574,7 @@
         },
         "outputId": "f6c12aab-8f4d-4f98-b96b-9c9a57a62900"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -617,7 +635,7 @@
         },
         "outputId": "8d3b4e99-1fed-469d-c900-1febbf29a425"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -671,8 +689,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from Bio.Blast import NCBIWWW, NCBIXML\n",
-        "from Bio import Entrez\n",
+        "from Bio import Entrez #The `Entrez` module in Biopython facilitates searching and retrieving data from NCBI databases via the Entrez online system.\n",
         "\n",
         "def blast_with_custom_settings(accession_id, email=\"your_email@example.com\",\n",
         "                               db=\"nr\", evalue=10, taxonomy=None):\n",
@@ -721,10 +738,38 @@
         "\n"
       ],
       "metadata": {
-        "id": "NmTXJhJKrGwX"
+        "id": "NmTXJhJKrGwX",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 394
+        },
+        "outputId": "987c5e1b-1e4f-4358-b927-b23cc266d886"
       },
-      "execution_count": 21,
-      "outputs": []
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'Bio'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-8eb746285fe5>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mBio\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mEntrez\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m def blast_with_custom_settings(accession_id, email=\"your_email@example.com\",\n\u001b[1;32m      4\u001b[0m                                db=\"nr\", evalue=10, taxonomy=None):\n\u001b[1;32m      5\u001b[0m     \"\"\"\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'Bio'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ],
+          "errorDetails": {
+            "actions": [
+              {
+                "action": "open_url",
+                "actionText": "Open Examples",
+                "url": "/notebooks/snippets/importing_libraries.ipynb"
+              }
+            ]
+          }
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -745,7 +790,7 @@
         "id": "qp49MUJ0K96i",
         "outputId": "9ac43655-b7b9-4dc4-d845-28552ee4adbc"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -791,6 +836,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### since the base code is created and is working, we want to save the data in a json file for each accession ID"
+      ],
+      "metadata": {
+        "id": "B0Hc4428P9Qz"
+      }
     },
     {
       "cell_type": "code",
