--- a/Dataset_Pubchem_targets_blast_proteins.ipynb
+++ b/Dataset_Pubchem_targets_blast_proteins.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNzUD/NPb1M319qkwoIadoZ",
+      "mount_file_id": "1-FAMhbMVGS7JO-kAZ8WWajUbvQyRN1ja",
+      "authorship_tag": "ABX9TyP6l2B8M7PcCNb5/aj1be2i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -113,93 +114,148 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#SOme example code generated (Just save it here)"
+        "# **Start the Code here**"
       ],
       "metadata": {
-        "id": "ulljcwB9ptDt"
+        "id": "Jx1scxUf6u-M"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "import os\n",
-        "import json\n",
-        "import pandas as pd\n",
-        "\n",
-        "def load_fasta_sequence(fasta_path):\n",
-        "    \"\"\"Reads a FASTA file and returns the amino acid sequence as a string.\"\"\"\n",
-        "    with open(fasta_path, \"r\") as f:\n",
-        "        lines = f.readlines()\n",
-        "    sequence = ''.join([line.strip() for line in lines if not line.startswith(\">\")])\n",
-        "    return sequence if sequence else None\n",
-        "\n",
-        "def build_dataset(base_dir):\n",
-        "    \"\"\"\n",
-        "    Builds a dataset of PubChem drug IDs, target PDB chains, and matched malaria proteins.\n",
-        "\n",
-        "    Args:\n",
-        "        base_dir (str): Path to the top-level folder with PubChem ID folders.\n",
-        "\n",
-        "    Returns:\n",
-        "        pd.DataFrame: Compiled dataset.\n",
-        "    \"\"\"\n",
-        "    rows = []\n",
-        "\n",
-        "    for pubchem_id in os.listdir(base_dir):\n",
-        "        folder_path = os.path.join(base_dir, pubchem_id)\n",
-        "        if not os.path.isdir(folder_path) or pubchem_id.startswith('.'):\n",
-        "            continue\n",
-        "\n",
-        "        for file in os.listdir(folder_path):\n",
-        "            if not file.endswith(\".json\") or file.startswith('.'):\n",
-        "                continue\n",
-        "\n",
-        "            json_path = os.path.join(folder_path, file)\n",
-        "            fasta_path = json_path.replace(\".json\", \".fasta\")\n",
-        "\n",
-        "            if not os.path.exists(fasta_path):\n",
-        "                continue\n",
-        "\n",
-        "            target_sequence = load_fasta_sequence(fasta_path)\n",
-        "            if not target_sequence:\n",
-        "                continue\n",
-        "\n",
-        "            with open(json_path, \"r\") as f:\n",
-        "                try:\n",
-        "                    results = json.load(f)\n",
-        "                except:\n",
-        "                    continue\n",
-        "\n",
-        "            # Skip if it's an error or \"no result found\" message\n",
-        "            if isinstance(results, dict) or (len(results) == 1 and \"message\" in results[0]):\n",
-        "                continue\n",
-        "\n",
-        "            target_chain_id = os.path.splitext(file)[0]  # filename without .json\n",
-        "\n",
-        "            for hit in results:\n",
-        "                rows.append({\n",
-        "                    \"pubchem_id\": pubchem_id,\n",
-        "                    \"target_chain_id\": target_chain_id,\n",
-        "                    \"target_sequence\": target_sequence,\n",
-        "                    \"malaria_match_id\": hit.get(\"subject_id\"),\n",
-        "                    \"malaria_sequence\": None,  # placeholder for future step\n",
-        "                    \"percent_identity\": hit.get(\"percent_identity\"),\n",
-        "                    \"alignment_length\": hit.get(\"alignment_length\"),\n",
-        "                    \"evalue\": hit.get(\"evalue\"),\n",
-        "                    \"bitscore\": hit.get(\"bitscore\")\n",
-        "                })\n",
-        "\n",
-        "    return pd.DataFrame(rows)\n",
-        "\n",
-        "\n",
-        "# Example usage:\n",
-        "# dataset = build_dataset(\"/your/full/path/to/PubChem_PDB_Results\")\n",
-        "# dataset.to_csv(\"drug_target_malaria_dataset.csv\", index=False)\n"
+        "json_path = '/content/drive/MyDrive/Drug Repurposing Project/PubChem_PDB_Results'"
       ],
       "metadata": {
-        "id": "17p0VQN9pxzZ"
+        "id": "lseoFpDy6xlE"
       },
-      "execution_count": null,
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Create the Ultimate Dataset:\n",
+        "import pandas as pd\n",
+        "import json\n",
+        "import os\n",
+        "\n",
+        "#Make the main dataset\n",
+        "columns = ['pubchem_id', 'target_chain_id', 'target_sequence', 'malaria_match_id', 'malaria_sequence', 'percent_identity', 'alignment_length', 'evalue', 'bitscore']\n",
+        "df = pd.DataFrame(columns=columns)"
+      ],
+      "metadata": {
+        "id": "28OP7JlN7Cp_"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "✅ What it does:\n",
+        "\n",
+        "    Each folder = a PubChem ID\n",
+        "\n",
+        "    Each file = a target name (e.g., a protein chain)\n",
+        "\n",
+        "    Each file contains a list of BLAST hit dictionaries\n",
+        "\n",
+        "    You want one row per hit, with all relevant info"
+      ],
+      "metadata": {
+        "id": "93PHgvkUuh4y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Traverse each PubChem ID folder\n",
+        "for pubchem_id in os.listdir(json_path):\n",
+        "    folder_path = os.path.join(json_path, pubchem_id)\n",
+        "    if not os.path.isdir(folder_path):\n",
+        "        continue\n",
+        "\n",
+        "    for file in os.listdir(folder_path):\n",
+        "        if not file.endswith('.json'):\n",
+        "            continue\n",
+        "        target_chain_id = file.replace('.json', '')\n",
+        "        file_path = os.path.join(folder_path, file)\n",
+        "\n",
+        "        with open(file_path, 'r') as f:\n",
+        "            try:\n",
+        "                data = json.load(f)\n",
+        "            except Exception as e:\n",
+        "                print(f\"Error reading {file_path}: {e}\")\n",
+        "                continue\n",
+        "\n",
+        "        # Skip if message says \"No result found.\"\n",
+        "        if isinstance(data, list) and len(data) > 0 and \"message\" in data[0]:\n",
+        "            if data[0][\"message\"] == \"No result found.\":\n",
+        "                continue\n",
+        "\n",
+        "        for hit in data:\n",
+        "            row = {\n",
+        "                'pubchem_id': pubchem_id,\n",
+        "                'target_chain_id': target_chain_id,\n",
+        "                'malaria_match_id': hit.get(\"subject_id\"),\n",
+        "                'percent_identity': hit.get(\"percent_identity\"),\n",
+        "                'alignment_length': hit.get(\"alignment_length\"),\n",
+        "                'evalue': hit.get(\"evalue\"),\n",
+        "                'bitscore': hit.get(\"bitscore\")\n",
+        "            }\n",
+        "            df = pd.concat([df, pd.DataFrame([row])], ignore_index=True)\n",
+        "\n",
+        "# Preview or save\n",
+        "print(df.head())\n",
+        "# df.to_csv(\"malaria_alignment_dataset.csv\", index=False)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nzteDnZitUs0",
+        "outputId": "ea8c6709-c8af-4a26-fffb-b46034e9860b"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-14-39ca453421af>:35: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+            "  df = pd.concat([df, pd.DataFrame([row])], ignore_index=True)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  pubchem_id target_chain_id target_sequence malaria_match_id  \\\n",
+            "0   11511120          4I24_A             NaN           5DYK_A   \n",
+            "1   11511120          4I24_A             NaN           1V0O_A   \n",
+            "2   11511120          4I24_A             NaN           1OB3_A   \n",
+            "3   11511120          4I24_B             NaN           5DYK_A   \n",
+            "4   11511120          4I24_B             NaN           1V0O_A   \n",
+            "\n",
+            "  malaria_sequence  percent_identity alignment_length        evalue  bitscore  \n",
+            "0              NaN         27.403846              208  1.415680e-13     159.0  \n",
+            "1              NaN         24.074074              216  2.054470e-10     131.0  \n",
+            "2              NaN         24.074074              216  2.112270e-10     131.0  \n",
+            "3              NaN         28.571429              210  7.233640e-13     154.0  \n",
+            "4              NaN         22.685185              216  1.192090e-11     141.0  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.to_csv(\"final_dataset.csv\", index=False)"
+      ],
+      "metadata": {
+        "id": "D2erAP82tzv5"
+      },
+      "execution_count": 15,
       "outputs": []
     }
   ]
